Fix rich media integration name in dark mode

--- a/dark-mode.css
+++ b/dark-mode.css
@@ -634,3 +634,8 @@ html.dark-mode ._5pw6{
 html.dark-mode ._5pw1 {
     background: var(--base-nine);
 }
+
+/* Rich media integration text */
+html.dark-mode ._29ey {
+	color: var(--base-fourty) !important;
+}
